--- a/templates/exec_ora_ddl.py.erb
+++ b/templates/exec_ora_ddl.py.erb
@@ -9,34 +9,62 @@ def printException (exception):
   print ("Error code = {}\n".format(error.code))
   print ("Error message = {}\n".format(error.message))
 
-parser = argparse.ArgumentParser()
-
-parser.add_argument("-hst", "--hostname", type=str, required=True, help="The Oracle Db Host")
-parser.add_argument("-pn", "--portnum", type=str, required=True, help="The Db Listener Port Number")
-parser.add_argument("-s", "--sid", type=str, required=True, help="The Oracle Db SID to connect to")
-parser.add_argument("-u", "--username", type=str, required=True, help="The Username to connect as")
-parser.add_argument("-pw", "--password", type=str, required=True, help="The Password for the User")
-parser.add_argument("-sql", "--sql_statement", type=str, required=True, help="The SQL Statement to Execute")
-args = parser.parse_args()
-print (args)
-
-hostname = 
-portnum =
-sid = 
-username = 
-password = 
+hostname =  "<%= @host %>"
+portnum = "<%= @port %>"
+sid = "<%= @sid %>"
+username = "<%= @usrnm %>"
+password = "<%= @pwd %>" 
 sql_statement = """
+DECLARE
+v_exists number;
+v_stmt   varchar2(2000);
+BEGIN
+select count(*) into v_exists from dba_tablespaces where tablespace_name = upper('<%= @env %>_STB');
+IF v_exists = 0 THEN
+v_stmt := 'create tablespace <%= @env %>_STB datafile '||'''<%= @db_file_dest %>/<%= @sid %>/<%= @env %>_STB.dbf'''||' size 10m autoextend on maxsize unlimited';
+EXECUTE IMMEDIATE v_stmt;
+END IF;
 
+select count(*) into v_exists from dba_tablespaces where tablespace_name = upper('<%= @env %>_IAS_OPSS');
+IF v_exists = 0 THEN
+v_stmt := 'create tablespace <%= @env %>_IAS_OPSS datafile '||'''<%= @db_file_dest %>/<%= @sid %>/<%= @env %>_IAS_OPSS.dbf'''||' size 10m autoextend on maxsize unlimited';
+EXECUTE IMMEDIATE v_stmt;
+END IF;
 
+select count(*) into v_exists from dba_tablespaces where tablespace_name = upper('<%= @env %>_IAU');
+IF v_exists = 0 THEN
+v_stmt := 'create tablespace <%= @env %>_IAU datafile '||'''<%= @db_file_dest %>/<%= @sid %>/<%= @env %>_IAU.dbf'''||' size 10m autoextend on maxsize unlimited';
+EXECUTE IMMEDIATE v_stmt;
+END IF;
+
+select count(*) into v_exists from dba_tablespaces where tablespace_name = upper('<%= @env %>_WLS');
+IF v_exists = 0 THEN
+v_stmt := 'create tablespace <%= @env %>_WLS datafile '||'''<%= @db_file_dest %>/<%= @sid %>/<%= @env %>_WLS.dbf'''||' size 10m autoextend on maxsize unlimited';
+EXECUTE IMMEDIATE v_stmt;
+END IF;
+
+select count(*) into v_exists from dba_tablespaces where tablespace_name = upper('<%= @env %>_MDS');
+IF v_exists = 0 THEN
+v_stmt := 'create tablespace <%= @env %>_MDS datafile '||'''<%= @db_file_dest %>/<%= @sid %>/<%= @env %>_MDS.dbf'''||' size 10m autoextend on maxsize unlimited';
+EXECUTE IMMEDIATE v_stmt;
+END IF;
+
+select count(*) into v_exists from dba_temp_files where tablespace_name = upper('<%= @env %>_IAS_TEMP');
+IF v_exists = 0 THEN
+v_stmt := 'create temporary tablespace <%= @env %>_IAS_TEMP tempfile '||'''<%= @db_file_dest %>/<%= @sid %>/<%= @env %>_IAS_TEMP.dbf'''||' size 10m autoextend on maxsize 2g';
+EXECUTE IMMEDIATE v_stmt;
+END IF;
+
+END;
 
 """
 
-dsn = cx_Oracle.makedsn(args.hostname, args.portnum, args.sid )
+dsn = cx_Oracle.makedsn(hostname, portnum, sid )
 try:
-    connection = cx_Oracle.connect (dsn=dsn, user=args.username, password=args.password, mode=cx_Oracle.SYSDBA)
+    connection = cx_Oracle.connect (dsn=dsn, user=username, password=password, mode=cx_Oracle.SYSDBA)
 except cx_Oracle.DatabaseError, exception:
     try:
-        connection = cx_Oracle.connect (dsn=dsn, user=args.username, password=args.password)
+        connection = cx_Oracle.connect (dsn=dsn, user=username, password=password)
     except cx_Oracle.DatabaseError, exception:
         print ('Failed to connect to DB: {}\n',format(dsn))
         printException (exception)
@@ -45,9 +73,9 @@ except cx_Oracle.DatabaseError, exception:
 cursor = connection.cursor ()
 
 try:
-  cursor.execute (args.sql_statement)
+  cursor.execute (sql_statement)
 except cx_Oracle.DatabaseError, exception:
-  print ('Failed to Execute Statement: {}\n'.format(args.sql_statement))
+  print ('Failed to Execute Statement: {}\n'.format(sql_statement))
   printException (exception)
   exit (1)
 
